--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -35,15 +35,15 @@ Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository
 Further aspects to consider are to provide rich metadata, which could be [domain-independent](/docs/metadata/#domain-independent-metadata) metadata or [domain-specific](/docs/metadata/#domain-specific-metadata) metadata, and should also include [provenance information](/docs/provenance), which previously would have been typically  included in the supplemental PDF section on general information and protocols. [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) should be followed, as set by the chemistry community, and implemented in articles and previously also in supplementary PDFs.   
 
 :::danger Notice:
-Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while the digital smart lab environment even collects structured data directly along the scientific workflow to ease data publication.
+Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while a digital smart lab environment even collects structured data directly along the scientific workflow.
 :::
 
 ### Best practice examples
 
-For a better understanding of data publications in field-specific repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead-by-Example pages:
+For a better understanding of data publications in field-specific repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead by Example pages:
 
-- in Chemotion Repository: [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426)
-- in Chemotion Repository and CSD: [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885)
+- in Chemotion Repository: [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426).
+- in Chemotion Repository and CSD/CCDC: [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885).
 
 ## Best practices for generic repositories
 
@@ -61,7 +61,7 @@ For further aspects to consider, we provide a non-exhaustive list of generic bes
 - **Data should be linked to chemical structures and reactions.**<br/>As analytical data are usually named following lab journal entries, the dataset must include a description of which data correspond to which sample, molecule, or experiment. This should be included in the format used for analytical data. Another solution on that is to provide a [supplementary table](/docs/machine-readable_chemical_structures/#provide-machine-readable-data-as-supplementary-table) (figure 1) within the data package, which should include InChI structure identifiers and SMILES structure codes and additional information such as RInChI reaction identifiers. Second-tier, chemical structures might also be added and represented as [CT files](/docs//ct_files) such as mol or SDfiles (figure 1). [RXNfiles](/docs//ct_files) may be used to describe chemical reactions in a machine readable way.
 - **Datasets should include scripts and workflows and information on software used.**<br/>Workflows, i.e. scripts used for data processing and input parameters, also for semi-automatic scripts, should be included. The metadata of the whole dataset should describe the language and version of scripts used as well as other software applied. Best practice is not only to include the code but to add notebooks such as R Notebooks or Jupyther notebooks.
 - **Data should be described with metadata and minimum information standards should be followed.**<br/>[Domain-independent](/docs/metadata/#domain-independent-metadata) metadata, via the repositories metadata editor, should be provided. Additionally, [domain-specific](/docs/metadata/#domain-specific-metadata) metadata should be published via the metadata editor, if supported by the repository of choice, within the analytical data or an additional README file. [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) as set by the chemistry community and followed in manuscripts and previously also in supplementary PDFs should be included.   
-- **The provenance information of data should be included.**<br/>Part of that [provenance information](/docs/provenance) is part of the dataset's metadata and should be added via the metadata editor of the repository. All information which previously would have typically been included in the supplemental PDF section on general information and reaction protocols, e.g. information on methods and instruments used, are provenance information and should be added to a README file, as long as no domain-specific metadata schema is available. This README could be a text file, or written in Markdown, while also providing a human-readable rendered representation as HTML.
+- **The provenance information of data should be included.**<br/>Part of that [provenance information](/docs/provenance) is part of the dataset's metadata and should be added via the metadata editor of the repository. All information which previously would have typically been included in the supplemental PDF section on general information and  protocols, e.g. information on methods and instruments used, are provenance information and should be added to a README file, as long as no domain-specific metadata schema is available. This README could be a text file, or written in Markdown, while also providing a human-readable rendered representation as HTML.
 
 :::danger Notice:
 Does that sound like a lot of manual work? Avoid extra work by using a [smart lab](/docs/smartlab) digital environments for collecting, processing, analysing and publishing research data, such as [Chemotion](/docs/chemotion_eln)! Plus, you may omit the preparation of supplementary PDFs and use the saved work time to prepare your dataset for publication!
@@ -69,12 +69,12 @@ Does that sound like a lot of manual work? Avoid extra work by using a [smart la
 
 ### Best practice examples
 
-For a better understanding of data publications in generic repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead-by-Example pages:
+For a better understanding of data publications in generic repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead by Example pages:
 
-- in RADAR4Chem: [Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](/docs/datasets/?doi=10.1002/ciuz.201900868)
-- in Zenodo: [A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](/docs/datasets/?doi=10.3390/metabo10040162)
-- in RADAR: [Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](/docs/datasets/?doi=10.3390/metabo10040162)
-- in DaRus: [Predictive design of ordered mesoporous silica with well-defined, ultra-large mesopores](/docs/tba)
+- in RADAR4Chem: [Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](/docs/datasets/?doi=10.1002/ciuz.201900868).
+- in Zenodo: [A dataset of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](/docs/datasets/?doi=10.3390/metabo10040162).
+- in RADAR: [Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](/docs/datasets/?doi=10.3390/metabo10040162).
+- in DaRus: [Predictive design of ordered mesoporous silica with well-defined, ultra-large mesopores](/docs/tba).
 
 ----
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-2060-842X](https://orcid.org/0000-0003-2060-842X)
