--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/10_ct_files.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/10_ct_files.mdx
@@ -2,33 +2,33 @@
 title: "Chemical Table File Formats"
 slug: "/ct_files"
 ---
- # Chemical Table File Formats
+ # Chemische Tabellendateiformate
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-## Introduction
+## Einführung
 
-Chemical Table files (CTfiles) are a group of text-based chemical file formats to describe collections of atoms such as molecules, intermetallic compounds, mixtures, formulations, polymers or unconnected atoms. Bonds in a bond block and atoms with their x-y-z coordinates in an atom block are listed in a connection table (Ctab). CTfiles may be also used to store additional information. The following paragraph summarises essential details on these formats.
+Chemische Tabellendateien (CTfiles) sind eine Gruppe textbasierter chemischer Dateiformate zur Beschreibung von Ansammlungen von Atomen wie Molekülen, intermetallischen Verbindungen, Gemischen, Formulierungen, Polymeren oder unverbundenen Atomen. Bindungen in einem Bindungsblock und Atome mit ihren x-y-z-Koordinaten in einem Atomblock werden in einer Verbindungstabelle (Ctab) aufgeführt. CTfiles können auch verwendet werden, um zusätzliche Informationen zu speichern. Der folgende Abschnitt fasst die wichtigsten Details zu diesen Formaten zusammen.
 
-## Molfies, rxnfile, SDfiles and RDfiles
+## Molfies, rxnfile, SDfiles und RDfiles
 
-The structures and relations of the most relevant CTfiles are shown in figure 1. The molfile is the most simple CTfile containing the atom coordinates as well as a Ctab of a single collection of atoms. The reaction file (rxnfile) wraps several molfiles of reactants and products, while the specification does not include agents such as solvents, reagents or catalysts, usually drawn above or below a reaction arrow. The SDfile (structure-data file) contains one or several molfiles and a data block for additional information, while the RDfile (reaction-data file) may also include rxnfiles. 
+Die Strukturen und Beziehungen der wichtigsten CTfiles sind in Abbildung 1 dargestellt. Die Molfile ist die einfachste CT-Datei und enthält die Atomkoordinaten sowie eine Ctab einer einzelnen Ansammlung von Atomen. Die Reaktionsdatei (rxnfile) umfasst mehrere Molfiles von Reaktanten und Produkten, während die Spezifikation keine Agenzien wie Lösungsmittel, Reagenzien oder Katalysatoren enthält, die normalerweise über oder unter einem Reaktionspfeil eingezeichnet sind. Die SD-Datei (Strukturdatendatei) enthält ein oder mehrere Molfiles und einen Datenblock für zusätzliche Informationen, während die RD-Datei (Reaktionsdatendatei) auch rxnfiles enthalten kann. 
 
-![selected chemical table file formats](/img/topics/TopicsConcepts_CT_file_formats_fig.svg)
+![ausgewählte Formate für chemische Tabellen](/img/topics/TopicsConcepts_CT_file_formats_fig.svg)
 
-**Figure 1: Relationship between molfile, rxnfile, SDfile and RDfile formats following the specification. RGfiles and RDfiles containing molfiles omitted for clarity.**
+**Abbildung 1: Beziehung zwischen den Formaten molfile, rxnfile, SDfile und RDfile gemäß der Spezifikation. RGfiles und RDfiles, die molfiles enthalten, wurden aus Gründen der Übersichtlichkeit weggelassen.**
 
-The data block may consist of several data items each starting with a data header in one line followed by the data, which might span over multiple lines. Each data item is terminated by a blank line.
+Der Datenblock kann aus mehreren Datenelementen bestehen, die jeweils mit einem Datenkopf in einer Zeile beginnen, gefolgt von den Daten, die sich über mehrere Zeilen erstrecken können. Jedes Datenelement wird durch eine Leerzeile abgeschlossen.
 
-All CTfiles do not make use of controlled vocabularies or [ontologies](/docs/ontology) in the data block, but these can be easily added or linked, due to the text-based nature of CTfile formats. One example is the [controlled vocabulary](https://nmredata.org/wiki/NMReDATA_tag_format) for SDtags of the open analytical data format [NMReDATA](https://nmredata.org/). The data block might be also used to store supplementary data to enhance [machine-readability of chemical structures](/docs/machine-readable_chemical_structures).
+Nicht alle CTfiles verwenden kontrollierte Vokabulare oder [Ontologien](/docs/ontology) im Datenblock, aber diese können aufgrund der textbasierten Natur der CTfile-Formate leicht hinzugefügt oder verknüpft werden. Ein Beispiel ist das [kontrollierte Vokabular](https://nmredata.org/wiki/NMReDATA_tag_format) für SDtags des offenen analytischen Datenformats [NMReDATA](https://nmredata.org/). Der Datenblock kann auch zur Speicherung zusätzlicher Daten verwendet werden, um die [Maschinenlesbarkeit chemischer Strukturen](/docs/machine-readable_chemical_structures) zu verbessern.
 
-There are two variants of these formats in use. Due to limitations in the V2000 format, the extended V3000 format was released. This V3000 format also includes a collection block, template block, extended connection table (extended CTAB) and enhanced features on stereochemistry. The V2000 format is limited in the size of molecules by supporting up to 999 atoms, thus, it is not applicable to large molecules. Moreover, the V2000 format does not support R-groups. However, the V3000 variant is currently not supported by all tools and applications. The V2000 format should be used to maximise interoperability, especially for chemistry dealing with small molecules.
+Es sind zwei Varianten dieser Formate in Gebrauch. Aufgrund von Einschränkungen im V2000-Format wurde das erweiterte V3000-Format veröffentlicht. Dieses V3000-Format enthält auch einen Sammlungsblock, einen Vorlagenblock, eine erweiterte Verbindungstabelle (erweiterte CTAB) und erweiterte Funktionen zur Stereochemie. Das V2000-Format ist in der Größe der Moleküle begrenzt, da es nur bis zu 999 Atome unterstützt und daher nicht für große Moleküle geeignet ist. Außerdem unterstützt das V2000-Format keine R-Gruppen. Die V3000-Variante wird jedoch derzeit nicht von allen Werkzeugen und Anwendungen unterstützt. Das V2000-Format sollte verwendet werden, um die Interoperabilität zu maximieren, insbesondere für die Chemie, die sich mit kleinen Molekülen befasst.
 
-CTfiles were created by MDL Information Systems, later acquired by Symyx Technologies, merged with Accelrys Corp and renamed to BIOVIA, which is now part of the Dassault Group. These formats can be used [without any restrictions by licences](https://www.mll-news.com/eugh-zum-urheberrechtlichen-schutz-von-software/) following European Union directive [2009/24/EC](http://data.europa.eu/eli/dir/2009/24/oj) and the EuGH judgement [C-406/10](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:62010CJ0406:EN:HTML).
+CTfiles wurden von MDL Information Systems entwickelt, das später von Symyx Technologies übernommen, mit Accelrys Corp. fusioniert und in BIOVIA umbenannt wurde, das heute zur Dassault-Gruppe gehört. Diese Formate können [ohne Einschränkungen durch Lizenzen](https://www.mll-news.com/eugh-zum-urheberrechtlichen-schutz-von-software/) gemäß der Richtlinie der Europäischen Union [2009/24/EG](http://data.europa.eu/eli/dir/2009/24/oj) und dem EuGH-Urteil [C-406/10](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:62010CJ0406:EN:HTML) verwendet werden.
 
-## Sources and further information
+## Quellen und weitere Informationen
 
-- [CTfile Formats, Standardizing Chemical Representation](https://discover.3ds.com/ctfile-documentation-request-form)
+- [CTfile-Formate, Standardisierung der Darstellung von Chemikalien](https://discover.3ds.com/ctfile-documentation-request-form)
 
 ----
-Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
+Hauptautor: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
