--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/10_metadata.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/10_metadata.mdx
@@ -3,53 +3,53 @@ title: "Metadata / MIChI"
 slug: "/metadata"
 ---
 
-# Metadata and Minimum Information
+# Metadaten und Mindestinformationen
 
-## Metadata and their schemas
-Metadata can be described as "data about data", meaning, it is data that describes data, like content of a dataset or file, or the context of this data.
-More specific examples could be the title, keywords, acquisition method with a certain analytical technique, and the list continues. Metadata should be supported by controlled vocabularies (ideally [ontologies](/docs/ontology)), and/or [data formats](/docs/format_standards).
+## Metadaten und ihre Schemata
+Metadaten können als "Daten über Daten" beschrieben werden, d. h. es handelt sich um Daten, die Daten beschreiben, wie z. B. den Inhalt eines Datensatzes oder einer Datei, oder den Kontext dieser Daten.
+Spezifischere Beispiele könnten der Titel, Schlüsselwörter, die Erfassungsmethode mit einer bestimmten Analysetechnik sein, und die Liste ließe sich fortsetzen. Metadaten sollten von kontrollierten Vokabularen (idealerweise [Ontologien](/docs/ontology)) und/oder [Datenformaten](/docs/format_standards) unterstützt werden.
 
-Metadata gets more specialized as the domain it describes does, where the hierarchy of domains can correspond to a hierarchical metadata structure, enabling layers of multiple standards from more generic metadata, where it is completely domain-independent, moving to more specific ones. 
+Metadaten werden in dem Maße spezialisierter, wie der Bereich, den sie beschreiben, es wird, wobei die Hierarchie der Bereiche einer hierarchischen Metadatenstruktur entsprechen kann, die mehrere Ebenen von Standards ermöglicht, von allgemeineren Metadaten, die völlig bereichsunabhängig sind, bis hin zu spezifischeren. 
 
-### Domain-Independent Metadata:
-Metadata can be domain-independent, focusing mostly on citation details, such as the title, the keywords, the people and institutions involved, or references to other data. Domain-independent metadata standards can be complemented by more domain-specific metadata.
+### Bereichsunabhängige Metadaten:
+Metadaten können bereichsunabhängig sein und sich hauptsächlich auf Zitationsdetails konzentrieren, wie z. B. den Titel, die Schlüsselwörter, die beteiligten Personen und Institutionen oder Verweise auf andere Daten. Bereichsunabhängige Metadatenstandards können durch bereichsspezifischere Metadaten ergänzt werden.
 
-* [Dublin Core](https://www.dublincore.org/specifications/dublin-core/dces/) is a more general set of fifteen elements describing networked resources. This set has been adapted and extended by other standards since its first publication in 1995.
+* [Dublin Core] (https://www.dublincore.org/specifications/dublin-core/dces/) ist ein allgemeiner Satz von fünfzehn Elementen zur Beschreibung vernetzter Ressourcen. Dieser Satz wurde seit seiner ersten Veröffentlichung im Jahr 1995 durch andere Standards angepasst und erweitert.
 
-* [DataCite](https://datacite.org/)  is a DOI provider that provides a [schema](https://schema.datacite.org/) of core metadata for research data. The standard is community driven and tries to integrate with other standards such as Dublin Core and [ORCID Record Schema](https://info.orcid.org/documentation/integration-guide/orcid-record/).
-* [OpenAIRE Guidelines for Data Archive Managers](https://guidelines.openaire.eu/en/latest/) provides an infrastructure, which facilitates interoperability between repositories adhering to those guidelines, which enhance data exposure and visibility. OpenAIRE has already adopted the DataCite [schema](https://schema.datacite.org/) but with some minor adjustments, such as accepting other persistent identifier schemes rather than the DOI, and some changes in the obligations of properties.
-* [PROV](https://www.w3.org/TR/prov-overview/): The W3C standard for provenance information can be used to provide information on the origin of scientific data.
-* [Open Archives Initiative Protocol for Metadata Harvesting (OAI-PMH)](http://www.openarchives.org/OAI/openarchivesprotocol.html) is a framework for harvesting metadata and can be applied to a wide variety of metadata formats. These should always include Dublin Core metadata.
+* [DataCite](https://datacite.org/) ist ein DOI-Anbieter, der ein [Schema](https://schema.datacite.org/) mit zentralen Metadaten für Forschungsdaten bereitstellt. Der Standard wird von der Gemeinschaft getragen und versucht, sich mit anderen Standards wie Dublin Core und [ORCID Record Schema](https://info.orcid.org/documentation/integration-guide/orcid-record/) zu integrieren.
+* Die [OpenAIRE Guidelines for Data Archive Managers](https://guidelines.openaire.eu/en/latest/) stellen eine Infrastruktur zur Verfügung, die die Interoperabilität zwischen Repositories, die sich an diese Richtlinien halten, erleichtert und die Sichtbarkeit der Daten erhöht. OpenAIRE hat bereits das DataCite [schema](https://schema.datacite.org/) übernommen, allerdings mit einigen geringfügigen Anpassungen, wie z. B. der Akzeptanz anderer persistenter Identifizierungsschemata anstelle des DOI, und einigen Änderungen bei den Verpflichtungen von Eigenschaften.
+* [PROV](https://www.w3.org/TR/prov-overview/): Der W3C-Standard für Provenance-Informationen kann verwendet werden, um Informationen über die Herkunft wissenschaftlicher Daten bereitzustellen.
+* [Open Archives Initiative Protocol for Metadata Harvesting (OAI-PMH)](http://www.openarchives.org/OAI/openarchivesprotocol.html) ist ein Rahmenwerk für das Harvesting von Metadaten und kann auf eine Vielzahl von Metadatenformaten angewendet werden. Diese sollten immer Dublin Core-Metadaten enthalten.
 
-### Domain-Specific Metadata:
-Metadata can be domain-specific, such as acquisition method with a certain analytical technique, or the pH for a certain reaction, which don’t apply to most other domains rather than chemistry.
+### Domänenspezifische Metadaten:
+Metadaten können bereichsspezifisch sein, wie z. B. die Beschaffungsmethode mit einer bestimmten Analysetechnik oder der pH-Wert für eine bestimmte Reaktion, die für die meisten anderen Bereiche als die Chemie nicht gelten.
 
-* [Core Scientific Metadata Model (CSMD)](http://icatproject-contrib.github.io/CSMD/) is a model for scientific studies, and it includes entity classes for facilities, users, investigations, instruments, datafiles, datasets, and samples. Within these classes most of the experimental parameters and results can be captured. Additionally, there are classes for e.g. publications, data formats, and sample types. Beside a publication of the specification as UML (Unified Modeling language) classes model definition, there is also a representation as an ontology. Future releases will focus on the integration of the [PROV](https://www.w3.org/TR/prov-overview/) model.
-* [ISA (Investigation Study Assay)](https://isa-specs.readthedocs.io/en/latest/index.html) is also a metadata framework focusing on biological investigations, and it has schemas for the representation in data formats (ISA-Tab and JSON). It can be applied to many methods and allows the inclusion of ontology references for the entities.
-* [IUPAC - FAIRSpec](https://github.com/IUPAC/IUPAC-FAIRSpec): It covers spectroscopic data including NMR spectroscopy. But this project is still preliminary and under development.
+* Das [Core Scientific Metadata Model (CSMD)] (http://icatproject-contrib.github.io/CSMD/) ist ein Modell für wissenschaftliche Studien, das Entitätsklassen für Einrichtungen, Benutzer, Untersuchungen, Instrumente, Datendateien, Datensätze und Proben umfasst. Innerhalb dieser Klassen können die meisten Versuchsparameter und Ergebnisse erfasst werden. Zusätzlich gibt es Klassen für z.B. Publikationen, Datenformate und Probentypen. Neben einer Veröffentlichung der Spezifikation als UML (Unified Modeling Language) Klassen Modelldefinition, gibt es auch eine Darstellung als Ontologie. Zukünftige Versionen werden sich auf die Integration des [PROV](https://www.w3.org/TR/prov-overview/) Modells konzentrieren.
+* [ISA (Investigation Study Assay)](https://isa-specs.readthedocs.io/en/latest/index.html) ist ebenfalls ein Metadaten-Framework, das sich auf biologische Untersuchungen konzentriert und über Schemata für die Darstellung in Datenformaten (ISA-Tab und JSON) verfügt. Es kann auf viele Methoden angewendet werden und ermöglicht die Einbeziehung von Ontologie-Referenzen für die Entitäten.
+* [IUPAC - FAIRSpec] (https://github.com/IUPAC/IUPAC-FAIRSpec): Es deckt spektroskopische Daten einschließlich NMR-Spektroskopie ab. Dieses Projekt ist jedoch noch vorläufig und befindet sich in der Entwicklung.
 
-## Minimum information standards (MI)
-Minimum information standards (MI) are guidelines regarding which metadata is required when reporting data. Furthermore, these guidelines outline which format to use for both this information as well as for the data itself. The set of MI depends on the type of data and is established to ensure that data are deposited following the FAIR principles. Therefore, minimum information is a subset of rich metadata which can accompany data.
+## Mindestinformationsstandards (MI)
+Mindestinformationsstandards (MI) sind Richtlinien darüber, welche Metadaten bei der Meldung von Daten erforderlich sind. Darüber hinaus geben diese Richtlinien vor, welches Format sowohl für diese Informationen als auch für die Daten selbst zu verwenden ist. Die MI hängen von der Art der Daten ab und werden festgelegt, um sicherzustellen, dass die Daten gemäß den FAIR-Grundsätzen hinterlegt werden. Daher sind die Mindestinformationen eine Teilmenge der umfangreichen Metadaten, die den Daten beigefügt werden können.
 
-### Minimum Information for Chemical Investigations (MIChI)
-Due to the increasing amount of data produced by omics, biology and related disciplines, such as bioinformatics and biochemistry, have developed a large set of [minimum information guidelines](https://fairsharing.org/search/?q=minimum+information) for  different methods. These were promoted by the [Minimum Information for Biological and Biomedical Investigations (MIBBI)](https://doi.org/10.1038/nbt.1411) project.
+### Mindestinformationen für chemische Untersuchungen (MIChI)
+Aufgrund der zunehmenden Menge an Daten, die durch Omics erzeugt werden, haben die Biologie und verwandte Disziplinen wie die Bioinformatik und die Biochemie eine große Anzahl von [Mindestinformationsrichtlinien](https://fairsharing.org/search/?q=minimum+information) für verschiedene Methoden entwickelt. Diese wurden durch das Projekt [Minimum Information for Biological and Biomedical Investigations (MIBBI)](https://doi.org/10.1038/nbt.1411) gefördert.
 
-Although the explored part of the chemical space along with the chemical data produced is increasing rapidly, there are only a few attempts to define guidelines for minimum information in chemistry, e.g. [Metabolomics Standards Initiative (MSI)](https://dx.doi.org/10.1007%2Fs11306-007-0082-2) or [Collaboratory for the Multi-scale Chemical Sciences (CMCS)](https://www.researchgate.net/publication/228602526_Metadata_in_the_collaboratory_for_multi-scale_chemical_science). The NFDI4Chem will address this issue and is working on Minimum Information for Chemical Investigations (MIChI), which includes standards for methods such as mass spectrometry, nuclear magnetic resonance and other spectroscopic methods. International workshops are already being carried out in order to start the needed discussion about the MIChI.
+Obwohl der erforschte Teil des chemischen Raums zusammen mit den erzeugten chemischen Daten rasch zunimmt, gibt es nur wenige Versuche, Richtlinien für Mindestinformationen in der Chemie zu definieren, z. B. [Metabolomics Standards Initiative (MSI)](https://dx.doi.org/10.1007%2Fs11306-007-0082-2) oder [Collaboratory for the Multi-scale Chemical Sciences (CMCS)](https://www.researchgate.net/publication/228602526_Metadata_in_the_collaboratory_for_multi-scale_chemical_science). Die NFDI4Chem wird sich dieses Themas annehmen und arbeitet an Mindestinformationen für chemische Untersuchungen (MIChI), die Standards für Methoden wie Massenspektrometrie, kernmagnetische Resonanz und andere spektroskopische Methoden umfassen. Es werden bereits internationale Workshops durchgeführt, um die notwendige Diskussion über die MIChI zu beginnen.
 
-Software projects such as [electronic lab notebooks](/docs/eln) or [repositories](/docs/repositories) often define their own layer of specific minimum metadata for chemical experiments which are based on existing standards, e.g. for metabolomics, or defined by the [data formats](/docs/format_standards) they import.
+Software-Projekte wie [electronic lab notebooks](/docs/eln) oder [repositories](/docs/repositories) definieren oft eine eigene Schicht spezifischer Mindestmetadaten für chemische Experimente, die auf bestehenden Standards, z. B. für Metabolomics, basieren oder durch die von ihnen importierten [data formats](/docs/format_standards) definiert sind.
 
-Existing [ontologies](/docs/ontology) are a good starting point to identify the information necessary to describe a method, results, samples, or other entities. Furthermore, controlled vocabularies and ontologies define what additional metadata is allowed in order to create rich metadata, in turn improving the data's FAIRness. Examples for formats with corresponding ontologies or a controlled vocabularies are [mzML](https://www.psidev.info/mzML), [CIF](https://www.iucr.org/resources/cif), [NeXus](https://www.nexusformat.org/),
-and the
+Vorhandene [Ontologien](/docs/ontology) sind ein guter Ausgangspunkt für die Ermittlung der Informationen, die zur Beschreibung einer Methode, von Ergebnissen, Proben oder anderen Einheiten erforderlich sind. Darüber hinaus definieren kontrollierte Vokabulare und Ontologien, welche zusätzlichen Metadaten zulässig sind, um reichhaltige Metadaten zu erstellen, was wiederum die FAIRness der Daten verbessert. Beispiele für Formate mit entsprechenden Ontologien oder kontrollierten Vokabularen sind [mzML](https://www.psidev.info/mzML), [CIF](https://www.iucr.org/resources/cif), [NeXus](https://www.nexusformat.org/),
+und das
 [Allotrope Data Format (ADF)](https://docs.allotrope.org/Allotrope%20Data%20Format.html).
 
-[The Chemical Analysis Metadata Platform (ChAMP)](https://champ.stuchalk.domains.unf.edu/) is a project, which focuses on defining a framework for chemical analysis methods.
+Die [Chemical Analysis Metadata Platform (ChAMP)](https://champ.stuchalk.domains.unf.edu/) ist ein Projekt, das sich auf die Definition eines Rahmens für chemische Analysemethoden konzentriert.
 
-## Metadata and the FAIR Principles
-The [FAIR Guiding Principles](https://doi.org/10.1038/sdata.2016.18) do not only apply to data but also the associated metadata. More information can be found in the [FAIR article](/docs/fair) or on [GoFair](https://www.go-fair.org/how-to-go-fair/).
+## Metadaten und die FAIR-Prinzipien
+Die [FAIR Guiding Principles](https://doi.org/10.1038/sdata.2016.18) gelten nicht nur für Daten, sondern auch für die zugehörigen Metadaten. Weitere Informationen finden Sie im [FAIR-Artikel](/docs/fair) oder auf [GoFair](https://www.go-fair.org/how-to-go-fair/).
 
-Metadata, as well as the data itself, should be assigned unique [persistent identifiers (PID)](/docs/pid) to be referenced in publications and other datasets. By organizing these PIDs hierarchically, each parameter in the metadata can be referenced individually.
-Machine-readable metadata should be provided in a standardized format, while the metadata entities should be well-documented regarding semantics and the relations between the entities and the actual data. This can be achieved by defining the metadata as an ontology or schema, e.g. as XML or JSON. Schemas help in indexing metadata for search engines, repositories, or other data registries, and also help improve interoperability—the I in FAIR. Most of the other FAIR guidelines also apply to metadata.
+Metadaten sollten ebenso wie die Daten selbst mit eindeutigen [persistent identifiers (PID)](/docs/pid) versehen werden, um in Veröffentlichungen und anderen Datensätzen referenziert werden zu können. Durch eine hierarchische Anordnung dieser PIDs kann jeder Parameter in den Metadaten einzeln referenziert werden.
+Maschinenlesbare Metadaten sollten in einem standardisierten Format bereitgestellt werden, während die Metadateneinheiten hinsichtlich ihrer Semantik und der Beziehungen zwischen den Einheiten und den eigentlichen Daten gut dokumentiert sein sollten. Dies kann durch die Definition der Metadaten in Form einer Ontologie oder eines Schemas, z. B. als XML oder JSON, erreicht werden. Schemata helfen bei der Indizierung von Metadaten für Suchmaschinen, Repositories oder andere Datenregister und tragen auch zur Verbesserung der Interoperabilität bei - dem I in FAIR. Die meisten der anderen FAIR-Richtlinien gelten auch für Metadaten.
 
 
-## Sources and further information
-A short introductory video to Metadata can be found [here](https://www.youtube.com/embed/TnpDnflK66I) (in German):
+## Quellen und weitere Informationen
+Ein kurzes Einführungsvideo zu Metadaten finden Sie [hier](https://www.youtube.com/embed/TnpDnflK66I):
