--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -88,17 +88,25 @@ Deciding when to publish your dataset is an important consideration that can imp
 
 ### 1. Include Dataset Review in Manuscript Review
 
-If possible, consider publishing your dataset alongside your manuscript submission. This allows reviewers to assess both your findings and the underlying data simultaneously, enhancing transparency and reproducibility in your research. By sharing your data during this stage, you provide reviewers with a complete picture of your work, which may lead to more constructive feedback.
+Some repositories may offer a "review status" option. Here, a dataset is set to read only and a provided URL can be given to reviewers in the article submission to allow access to your dataset. This allows reviewers to assess both your findings and the underlying data simultaneously, enhancing transparency and reproducibility in your research. By sharing your data during this stage, you provide reviewers with a complete picture of your work, which may lead to more constructive feedback.
+
+If possible, ensure you have reserved a DOI for your dataset so you can provide this during the submission process, as well, while clearly communicating that this is not yet active. 
+
+This option allows you to review your dataset and make any requested changes prior to data publication.
+
+In this case, the dataset should be published once the manuscript has been accepted—at the latest once the journal has provided you with a DOI for the manuscript so you can [add it to your dataset](#4-link-your-datasets-with-articles).
 
 ### 2. Publish Data Prior to Manuscript Submission
 
-In some cases, it might be beneficial to publish your dataset before submitting your manuscript. This approach can establish a clear record of your data and its availability, allowing other researchers to reference or build upon it even before the formal publication of your article. Just ensure that you clearly indicate in your manuscript where readers can find the associated dataset.
+In some cases, it might be beneficial to publish your dataset before submitting your manuscript. This approach can establish a clear record of your data and its availability, allowing other researchers to reference or build upon it even before the formal publication of your article. 
 
-### 3. Consider Journal Policies
+This allwos you to provide a registered and functioning DOI for the dataset. Many repositories will allow you to alter the dataset metadata, thus [adding the article DOI](#4-link-your-datasets-with-articles) at a later point in time. 
+
+### Consider Journal Policies
 
 Be aware of any specific policies from the journal you intend to submit to regarding data sharing and publication timelines. Some journals encourage or require authors to make their datasets publicly available prior to or at the time of article submission, while others may have different guidelines.
 
-### 4. Ensure Data Quality and Completeness
+### Ensure Data Quality and Completeness
 
 Before publishing, make sure that your dataset is well-organized, complete, and adequately documented. Providing sufficient metadata will enhance discoverability and usability for other researchers who may want to access or cite your work.
 
